--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 
-NEXT_PUBLIC_API_URL=https://backend.druck-teleprint.at
-NEXT_PUBLIC_API_URL=http://127.0.0.1:3085
-NEXT_PUBLIC_API_URL=https://backendtest.druck-teleprint.at
+# NEXT_PUBLIC_API_URL=https://backend.druck-teleprint.at
+# NEXT_PUBLIC_API_URL=http://127.0.0.1:3085
+# NEXT_PUBLIC_API_URL=https://backendtest.druck-teleprint.at
+
+NEXT_PUBLIC_API_URL = https://teleprint-backend.webzee.at/
